# lms-backend

./: basedpyrightconfig.json  pyproject.toml
alembic/: env.py
alembic/versions/: 3db751486cf1_create_users_table.py
app/: main.py
app/core/: error_codes.py  exceptions.py  logger.py  response.py
app/db/: session.py
app/models/: user.py
