[project]
name = "lms-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.0",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.51",
    "sqlalchemy-utils>=0.42.1",
]
